--- a/location.html
+++ b/location.html
@@ -27,16 +27,13 @@
     <main>
         <div class="main-text1">
             <p>
-                OUR <br>
-                LOCATION
+                OUR <br> LOCATION
             </p>
         </div>
         <div class="main-text2">
             <h3>99 KING STREET</h3>
             <p>
-                NEWPORT <br>
-                RI 02840 <br>
-                UNITED STATES OF AMERICA
+                NEWPORT <br> RI 02840 <br> UNITED STATES OF AMERICA
             </p>
             <br>
             <p>Our newly opened gallery is located near the Edward King House on 99 King Street, the Modern Art Gallery is free to all visitors and open seven days a week from 8am to 9pm.</p>
@@ -46,8 +43,7 @@
     <footer>
         <div class="footer-text-span">
             <p>
-                MODERN<br>
-                ART GALLERY
+                MODERN <br> ART GALLERY
             </p>
         </div>
         <div class="footer-text-p">
